@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.6.17) unstable; urgency=low
 
   * tcp-stock: implemented a load balancer
   * python: accept address list in the ajp() method
+  * http-server: added timeout for the HTTP request headers
 
  --
 
